--- a/src/content/shared/sso-migration-notice.mdx
+++ b/src/content/shared/sso-migration-notice.mdx
@@ -1,5 +1,5 @@
 <Caution>
 
-If your organization's SSO was set up before April 2024 according to the [legacy instructions](#legacy-setup), your organization must create a new SSO configuration with the [updated instructions](#setup) before November 15, 2024. After November 15, 2024, the legacy setup will no longer work and organization members using it will lose access to GraphOS.
+If your organization's SSO was set up before April 2024 according to the [legacy instructions](#legacy-setup), you must create a new SSO configuration with the [updated instructions](#setup) before November 15, 2024. After November 15, 2024, the legacy setup will no longer work, and organization members using it will lose access to GraphOS.
 
 </Caution>
