--- a/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
+++ b/src/content/graphos/metrics/notifications/schema-proposal-integration.mdx
@@ -37,7 +37,7 @@ These webhooks are useful for automating workflows. For example, your organizati
 
 Custom webhooks require you to set up an HTTPS endpoint accessible via the public internet. GraphOS sends webhook notifications to this endpoint as `POST` requests. Notification details are provided as JSON in the request body, as described in the next section.
 
-1. Specify a name for this notification channel in the Channel Name field. This name must be unique among all your graph's notification channels, including Slack channels.
+1. Specify a name for this notification channel in the **Channel Name** field. This name must be unique among all your graph's notification channels, including Slack channels.
 2. In the **Webhook URL** input, provide the URL of your HTTP(S) endpoint.
 3. Optionally, enter a **Secret Token**.
 
