--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -29,6 +29,8 @@ Setup requires:
 - An Okta user account with administrator privileges
 - A GraphOS user account with the [**Org Admin** role](../members/#organization-wide-member-roles)
 
+<!-- vale Apollo.Headings = NO -->
+
 ### Step 1. Share your SSO details
 
 1. Go to [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content). Open the **Settings** page from the top navigation. Open the **Org management** tab from the left sidebar and click **Enable SSO**. A setup wizard appears.
@@ -113,6 +115,8 @@ Setup requires:
 The GraphOS Studio setup wizard populates your SSO metadata based on the **Metadata URL** you entered in the last step. Verify the values are correct and click **Continue**.
 
 ### Step 5. Enable SSO
+
+<!-- vale Apollo.Headings = YES -->
 
 In the setup wizard, click the **Enable SSO** button to finalize setup.
 Once your SSO setup is finalized, you must [assign users](#assign-users-in-okta) to your custom app in Okta to give them access.
