--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -66,7 +66,7 @@ Your Apollo contact will then be able to complete your SSO setup.
 
 Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP. For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
 
-<SSOLegacyUsers />
+{/* <SSOLegacyUsers /> */}
 
 Once you've confirmed the new setup works as expected, remove any legacy Apollo GraphOS applications in your IdP.
 
