Update generic OIDC guide

--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -17,7 +17,7 @@ OIDC-based SSO setup in Entra ID has these steps:
 1. Share your SSO details with Apollo in GraphOS Studio.
 1. Create an app registration for Apollo GraphOS in Entra ID.
 1. Configure API permissions in Entra ID.
-1. Enable SSO.
+1. Enable SSO in GraphOS Studio.
 
 ### Prerequisites
 
