--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -47,7 +47,7 @@ Setup requires:
 6. Next to **Client credentials**, click **Add a certificate or secret** and create a new secret.
 7. Copy and paste the secret's **Value** into the **Client Secret** field in the setup wizard.
 8. Back in the **Overview** section, select **Endpoints** from the top menu.
-9. Copy and open the **OpenID Connect metadata document** URL in a new browser tab. Find the **`issuer`** value. It should be formatted like `https://login.microsoftonline.com/unique-value/vx.x`. Copy and paste this URL into into the **Issuer** field in the setup wizard.
+9. Copy and open the **OpenID Connect metadata document** URL in a new browser tab. Find the **`issuer`** value. It should be formatted like `https://login.microsoftonline.com/unique-value/vx.x`. Copy and paste this URL into the **Issuer** field in the setup wizard.
 10. Click **Continue**.
 
 ### Step 3. Configure API permissions
