--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -88,7 +88,7 @@ Setup requires:
 
 ### Step 3. Share SAML metadata with Apollo
 
-In the setup wizard, enter the **App Federation Metadata URL** you previously copied into the **Upload metadata from URL** textbox.
+In the setup wizard, enter the **App Federation Metadata URL** you previously copied into the **Upload metadata from URL** field.
 Click **Continue**.
 
 ### Step 4. Verify details
