--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -39,7 +39,7 @@ Setup requires:
    - **App Name**: `Apollo GraphOS`
    - **App logo**: [Apollo logo](../../img/sso/apollo-sk-logo.png) (optional)
 
-3. If your IdP permits it, upload the SP SAML XML metadata file provided by the GraphOS setup wizardz. Otherwise, open the XML metadata file, view the SAML metadata values, and manually enter them in your IdP.
+3. If your IdP permits it, upload the SP SAML XML metadata file provided by the GraphOS setup wizard. Otherwise, open the XML metadata file, view the SAML metadata values, and manually enter them in your IdP.
 
    - Set your **Single Sign-on URL** or **ACS URL** to the Single Sign-on URL provided by the wizard. You can also use this value for the following fields:
 
