--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -77,6 +77,12 @@ Once you've verified the values or corrected them, click **Continue**.
 
 <SSOLegacyUsers idp="your IdP" appType="application" />
 
+## Assign users in your IdP
+
+Once your SSO setup is live, assign users to your new Apollo GraphOS application in your IdP.
+Consult your IdP documentation if necessary.
+For help assigning the relevant groups and users, contact your SSO or Identity & Access Management team.
+
 ## Legacy setup
 
 <SSOLegacyCaution />
