--- a/src/content/shared/sso-entra-id-assign-users.mdx
+++ b/src/content/shared/sso-entra-id-assign-users.mdx
@@ -11,3 +11,4 @@ You may want to begin by adding yourself individually and then testing SSO by cl
 />
 
 Once you've successfully tested your own user's ability to use SSO, add any applicable users or groups.
+Repeat these steps whenever you want to grant GraphOS Studio access to a new user or group.
