--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -34,7 +34,7 @@ Setup requires:
 
    <Note>
 
-   To use the latest version of Apollo's SSO, ensure you _create a custom app integration_ in Okta rather than usie the GraphOS app in the Okta Application Network.
+   To use the latest version of Apollo's SSO, ensure you _create a custom app integration_ in Okta rather than use the GraphOS app in the Okta Application Network.
 
    </Note>
 
