--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-oidc-guide.mdx
@@ -14,8 +14,8 @@ This guide walks through configuring Microsoft Entra ID (formerly known as Azure
 
 OIDC-based SSO setup in Entra ID has these steps:
 
-1. Share your SSO details with Apollo in GraphOS Studio.
-1. Create an app registration for Apollo GraphOS in Entra ID.
+1. Enter your SSO details in GraphOS Studio.
+1. Create an app registration for GraphOS in Entra ID.
 1. Configure API permissions in Entra ID.
 1. Enable SSO in GraphOS Studio.
 
@@ -31,9 +31,9 @@ Setup requires:
 
 <!-- vale Apollo.Headings = NO -->
 
-### Step 1. Share your SSO details
+### Step 1. Enter your SSO details
 
-<SSOShareDetails />
+<SSOShareDetails type="OIDC" />
 
 ### Step 2. Create an Entra ID app registration
 
