--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -27,9 +27,9 @@ Setup requires:
 
 <!-- vale Apollo.Headings = NO -->
 
-### Step 1. Share your SSO details
+### Step 1. Enter your SSO details
 
-<SSOShareDetails />
+<SSOShareDetails type="SAML" />
 
 ### Step 2. Create a custom application
 
