--- a/src/content/graphos/org/sso/oidc-integration-guide.mdx
+++ b/src/content/graphos/org/sso/oidc-integration-guide.mdx
@@ -15,9 +15,9 @@ If you use Microsoft Entra ID as your IdP, instead see [the Entra OIDC guide](./
 
 OIDC-based SSO setup has these steps:
 
-1. Share your SSO details with Apollo in GraphOS Studio.
-1. Create an application for Apollo GraphOS in your IdP.
-1. Configure OIDC to work with Apollo.
+1. Enter your SSO details in GraphOS Studio.
+1. Create an application for GraphOS in your IdP.
+1. Configure OIDC to work with GraphOS.
 1. Enable SSO in GraphOS Studio.
 
 The SSO setup wizard in GraphOS Studio guides you through these steps.
@@ -32,9 +32,9 @@ Setup requires:
 
 <!-- vale Apollo.Headings = NO -->
 
-### Step 1. Share your SSO details
+### Step 1. Enter your SSO details
 
-<SSOShareDetails />
+<SSOShareDetails type="OIDC" />
 
 ### Step 2. Create a custom application
 
