--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -23,9 +23,9 @@ Setup requires:
 
 <!-- vale Apollo.Headings = NO -->
 
-### Step 1. Share your SSO details
+### Step 1. Enter your SSO details
 
-<SSOShareDetails />
+<SSOShareDetails type="SAML" />
 
 ### Step 2. Create a custom Okta app integration
 
