Add AuthNRequest step

--- a/src/content/graphos/org/sso/saml-integration-guide.mdx
+++ b/src/content/graphos/org/sso/saml-integration-guide.mdx
@@ -58,6 +58,7 @@ Setup requires:
    - `family_name`: Your IdP's last name attribute,often something like `user.lastName`
 
 5. Save your configuration.
+6. In the setup wizard in GraphOS Studio, select whether your IdP requires signing an AuthNRequest. Then click **Continue**.
 
 ### Step 3. Share SAML metadata with Apollo
 
