Update AuthnRequest info

--- a/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
+++ b/src/content/graphos/org/sso/microsoft-entra-id-integration-saml-guide.mdx
@@ -84,7 +84,8 @@ Setup requires:
   width="700"
 />
 
-10. In the setup wizard in GraphOS Studio, select that your IdP requires signing an AuthNRequest. Then click **Continue**.
+10. In the setup wizard in GraphOS Studio, select whether your Entra implementation requires signing an AuthnRequest.
+11. Click **Continue**..
 
 ### Step 3. Share SAML metadata with Apollo
 
