--- a/src/content/graphos/org/sso/okta-integration-guide.mdx
+++ b/src/content/graphos/org/sso/okta-integration-guide.mdx
@@ -86,7 +86,8 @@ Setup requires:
    Then click **Next**.
 
 7. In the **Feedback** step, select **I'm an Okta customer adding an internal app**. Click **Finish**.
-8. In the setup wizard in GraphOS Studio, select that your IdP requires signing an AuthNRequest. Then click **Continue**.
+8. In the setup wizard in GraphOS Studio, select whether your Okta implementation requires signing an AuthnRequest.
+9. Click **Continue**.
 
 ### Step 3. Share SAML metadata with Apollo
 
