--- a/src/content/shared/sso-legacy-caution.mdx
+++ b/src/content/shared/sso-legacy-caution.mdx
@@ -2,6 +2,7 @@
 
 The below instructions are provided for reference only. Beginning in April 2024, Apollo recommends that all organizations use the [updated instructions](#setup) to create a new SSO connection.
 
-If you previously configured SSO using the instructions below and want to use [multi-organization SSO](./multi-organization) you must create a new SSO connection with the updated instructions.
+To use [multi-organization SSO](./multi-organization), your SSO connection cannot use PingOne as shown in the legacy instructions below.
+Follow the [updated instructions](#setup) to create a new SSO connection.
 
 </Note>
