--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -76,7 +76,7 @@ Apollo can also generate login links on request. Get in touch with your Apollo c
 While this feature is in [preview](/resources/product-launch-stages#preview), members can only log in with IdP-initiated SSO. Therefore, during preview, all members of an organization with multi-organization SSO must log in from their IdP. If they try to log in on `studio.apollographql.com/login`, they will receive an error message directing them to log in via IdP.
 
 <iframe
-  src="https://events097286.typeform.com/to/Qh2JZZV8"
+  src="https://events097286.typeform.com/to/aMHSzzDT"
   width="100%"
   height="400px"
   title="Multi-organization SSO survey"
