--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -74,3 +74,12 @@ Apollo can also generate login links on request. Get in touch with your Apollo c
 ## Preview limitations
 
 While this feature is in [preview](/resources/product-launch-stages#preview), members can only log in with IdP-initiated SSO. Therefore, during preview, all members of an organization with multi-organization SSO must log in from their IdP. If they try to log in on `studio.apollographql.com/login`, they will receive an error message directing them to log in via IdP.
+
+<iframe
+  src="https://events097286.typeform.com/to/aMHSzzDT"
+  width="100%"
+  height="400px"
+  title="Multi-organization SSO survey"
+>
+  Loading…
+</iframe>
