--- a/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/lattice-troubleshooting.mdx
@@ -50,7 +50,8 @@ The previous example renames a `host` header to `x-host`.
 
 ### Service in resource share doesn't appear in private subgraphs
 
-Cloud Dedicated doesn't automatically scan your resource shares for new Lattice services. If you add a service, you can manually trigger a scan by going to your Apollo Organization settings page and clicking the **Rescan subgraphs** button.
+Cloud Dedicated doesn't automatically scan your resource shares for new Lattice services. [Adding a subgraph](https://www.apollographql.com/docs/graphos/cloud-routing/dedicated/lattice#setup-for-existing-graphs) or a [creating a new graph](https://www.apollographql.com/docs/graphos/cloud-routing/dedicated/lattice#setup-for-new-graphs) will automatically trigger a scan for new Lattice services. If you are still
+unable to view the latest resource shares for your graph, please <TrackableLink href="https://www.apollographql.com/contact-sales?type=dedicated&referrer=docs" eventName="content_contact_cloud">get in touch</TrackableLink> for additional support.
 
 ### Providing `Authorization` headers
 
