--- a/src/content/graphos/org/sso/multi-organization.mdx
+++ b/src/content/graphos/org/sso/multi-organization.mdx
@@ -18,12 +18,12 @@ Different GraphOS organizations can share the same identity provider (IdP) and S
 
 For multi-organization SSO, each organization needs to individually configure SSO according to the latest instructions (as of April 2024) for their particular IdP:
 
-- [Okta (SAML-based)](../org/sso/okta-integration-guide/)
+- [Okta (SAML-based)](./okta-integration-guide/)
 - Microsoft Entra ID (formerly known as Azure Active Directory)
   - [SAML-based](./microsoft-entra-id-integration-saml-guide)
   - [OIDC-based](./microsoft-entra-id-integration-oidc-guide)
-- [Generic SAML](../org/sso/saml-integration-guide/)
-- [Generic OIDC](../org/sso/oidc-integration-guide/)
+- [Generic SAML](./saml-integration-guide/)
+- [Generic OIDC](./oidc-integration-guide/)
 
 ## Switching between organizations
 
